# Brit-Demo

./: .gitignore  README.md  pyproject.toml
brit_demo/: database.py  main.py  schemas.py
brit_demo/static/: index.158e45f1.css  index.c3240aac.js  index.html
