[tool.poetry]
name = "brit-demo"
version = "0.1.0"
description = ""
authors = ["James Hudson <james.hudson@boughtbymany.com>"]
readme = "README.md"
packages = [{include = "brit_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
SQLAlchemy = "^1.4.44"
fastapi-crudrouter = "^0.8.5"
psycopg2-binary = "^2.9.5"
mangum = "^0.16.0"
aws-psycopg2 = "^1.3.8"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = {version = "^22.10.0", allow-prereleases = true}
uvicorn = {extras = ["standard"], version = "^0.19.0"}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
